--- a/styles/index.css
+++ b/styles/index.css
@@ -15,7 +15,7 @@ body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
-    font-family: 'Noto Sans TC', sans-serif;
+    font-family: 'Open Sans', 'Noto Sans TC', sans-serif;
 }
 
 .container {
@@ -46,7 +46,7 @@ nav {
 
 footer.jumbotron {
     margin-bottom: 0;
-    padding: 1rem 2rem;
+    padding: 1rem 0;
     font-weight: var(--bold);
     font-size: 1.1em
 }
