remove inline padded style; use event listener instead of onsubmit

--- a/styles/index.css
+++ b/styles/index.css
@@ -22,6 +22,11 @@ body {
     flex: 1;
 }
 
+.padded.container {
+    max-width: 600px;
+    margin: 10px auto;
+}
+
 nav {
     background: var(--theme-color-darker);
 }
